# LabRabOS

./: README.md
CMake_Lab2/: CMakeLists.txt
CMake_Lab2/CMake_Lab2/: CMakeLists.txt  CMake_Lab2.cpp  CMake_Lab2.h  main.cpp
CMake_Lab2/tests/: CMakeLists.txt  tests.cpp
Koloc/: CMakeLists.txt  Koloc.cpp  Koloc.h  main.cpp  tests.cpp
Koloc/Koloc/: CMakeLists.txt  Koloc.cpp  Koloc.h
Kolok2/todo/: pom.xml
Kolok2/todo/src/main/java/com/example/todo/: Task.java  TaskController.java  TodoApplication.java
Lab1/: Описание проекта
Lab1/Creator/: Creator.sln
Lab1/Creator/Creator/: Creator.cpp  Creator.vcxproj
Lab1/Creator/Creator/x64/Debug/: Creator.exe.recipe  Creator.ilk  vc143.idb
Lab1/Creator/Creator/x64/Debug/Creator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Creator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab1/Creator/Creator/x64/Release/: Creator.exe.recipe  Creator.iobj  Creator.ipdb
Lab1/Creator/Creator/x64/Release/Creator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab1/Main/Main/: Main.cpp  Main.vcxproj  Ot.txt
Lab1/Main/Main/Main/x64/Debug/: vc143.idb
Lab1/Main/Main/Main/x64/Debug/Main.tlog/: Main.lastbuildstate
Lab1/Main/Main/x64/Release/: Main.exe.recipe  Main.iobj  Main.ipdb
Lab1/Main/Main/x64/Release/Main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Main.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab1/Reporter/: Reporter.sln
Lab1/Reporter/Reporter/: Reporter.cpp  Reporter.vcxproj
Lab1/Reporter/Reporter/Reporter/x64/Debug/: Reporter.exe.recipe  Reporter.ilk  vc143.idb
Lab1/Reporter/Reporter/Reporter/x64/Debug/Reporter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Reporter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab1/Reporter/Reporter/x64/Debug/: Reporter.exe.recipe  Reporter.ilk  Reporter.vcxproj.FileListAbsolute.txt  vc143.idb
Lab1/Reporter/Reporter/x64/Debug/Reporter.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Reporter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab1/Reporter/Reporter/x64/Release/: Reporter.exe.recipe  Reporter.iobj  Reporter.ipdb
Lab1/Reporter/Reporter/x64/Release/Reporter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab2/: CMakeLists.txt  Описание проекта
Lab2(1)/: CMakeLists.txt
Lab2(1)/Lab2/: CMakeLists.txt  Lab2(1).cpp  Lab2(1).h
Lab2(1)/lib/: ArrayFunctions.cpp  ArrayFunctions.h  CMakeLists.txt
Lab2(1)/tests/: CMakeLists.txt  tests.cpp
Lab2.2/: ArrayFunctions.cpp  ArrayFunctions.h  CMakeLists.txt  main.cpp  tests.cpp
Lab2/lib/: ArrayFunctions.cpp  ArrayFunctions.h
Lab2/main/: CMakeLists.txt  Main.cpp
Lab2/tests/: CMakeLists.txt
Lab3/: CMakeLists.txt  Lab3.sln  function.cpp  function.h  main.cpp  tests.cpp  Описание проекта
Lab3.1/: Lab3.1.sln
Lab3.1/Lab3.1/: Lab3.1.cpp  Lab3.1.vcxproj  Lab3.1.vcxproj.filters
Lab3.1/Lab3.1/x64/Debug/: Lab3.1.exe.recipe  Lab3.1.ilk  vc143.idb
Lab3.1/Lab3.1/x64/Debug/Lab3.1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab3.1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab3/Lab3/: Lab3.cpp  Lab3.vcxproj
Lab3/Lab3/x64/Debug/: Lab3.exe.recipe  Lab3.ilk  vc143.idb
Lab3/Lab3/x64/Debug/Lab3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab3CMake/: CMakeLists.txt  function.cpp  function.h  main.cpp  tests.cpp
Lab3CMake2/: CMakeLists.txt  function.cpp  function.h  main.cpp  tests.cpp
Lab4/: CMakeLists.txt  Message.h  Receiver.cpp  Sender.cpp  main.cpp  tests.cpp  Описание проекта
Lab5/: CMakeLists.txt  Client.cpp  Common.h  Server.cpp  Tests.cpp  employee.h  Описание проекта
Main/: Main.sln
Main/Main/: Main.cpp
Main/Main/x64/Release/Main.tlog/: CL.command.1.tlog  CL.read.1.tlog  Main.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
